start design teachers part

--- a/teachers.html
+++ b/teachers.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAKM</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/teachers.css">
 </head>
 <body>
     <!--Navbar is start here-->
@@ -47,11 +47,13 @@
 
       <div class="container">
           <div class="row">
-              <div class="col-6">
-
+              <div class="col-8 d-flex justify-content-center">
+                <img src="images/teachers/pnc.jpg" class="img-fluid w-50" alt="">
+                
               </div>
-              <div class="col-6">
-
+              <div class="col-4 text-light">
+                <h1>Principle</h1>
+                <p>title</p>
               </div>
           </div>
       </div>
