--- a/teachers.html
+++ b/teachers.html
@@ -51,17 +51,23 @@
                 <img src="images/teachers/pnc.jpg" class="img-fluid w-50" alt="">
                 
               </div>
-              <div class="col-4 text-light">
-                <h1>Principle</h1>
+              <div class="col-4  text-light">
+                <h1 >Principle</h1>
                 <p>title</p>
               </div>
           </div>
       </div>
       <div class="container">
-          <div class="row">
-              <div class="col-4"></div>
-              <div class="col-4"></div>
-              <div class="col-4"></div>
+          <div class="row ">
+              <div class="col-4 d-flex justify-content-center">
+                <img src="l;skdf" alt="">
+              </div>
+              <div class="col-4 d-flex justify-content-center">
+                <img src="asl;dkjf" alt="">
+              </div>
+              <div class="col-4 d-flex justify-content-center">
+                <img src="s;ldkf;l" alt="">
+              </div>
           </div>
       </div>
       <div class="container">
