responsive almost complete

--- a/teachers.html
+++ b/teachers.html
@@ -90,7 +90,7 @@
 <footer>
   <div class="footer-content">
    <div class="row">
-     <div class="footer-section about col-4 col-md-6 col-sm-12">
+     <div class="footer-section about  col-md-4 ">
        <h1><span class="logo-s">S</span>AKM</h1>
        <p>Hazrat Shah Ali Bagdadi (R.) Kamil M.A. Madrasha</p>
        <p>Mirpur-1, Dhaka -1216</p>
@@ -106,7 +106,7 @@
          <i class="fa fa-google mx-3"></i>
        </div>
      </div>
-     <div class="footer-section links col-4 col-md-6 col-sm-12">
+     <div class="footer-section links col-md-4">
        <h2>Quick Links</h2><br/>
        <ul class="link">
          
@@ -119,7 +119,7 @@
        </ul>
 
      </div>
-     <div class="footer-section contact-form col-4 col-md-12 col-sm-12">
+     <div class="footer-section contact-form col-md-4 ">
        <h2>Contact Us</h2>
        <form action="index.html">
          <div class="input-group mb-3">
