students-gallary in running

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAKM</title>
-    <link href="https://fonts.googleapis.com/css?family=Shojumaru&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Lobster|Righteous|Shojumaru&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
@@ -109,7 +109,7 @@
         <section class="container">
           <div class="row "> 
           <div class="col-md-4  ">
-            <div class="card  text-dark"  id="cardAfterSlider">
+            <div class="card d-flex align-items-center text-dark"  id="cardAfterSlider">
               <div class="card-icon-wrapper">
                 <i class="fa fa-facebook"></i>
               </div>
@@ -232,7 +232,7 @@
               </div>
               <div class="  col-md-6  ">
                   <div class="container text-dark">
-                      <h1>Md Hasan Sheikh</h1>
+                      <h3>Md Hasan Sheikh</h3 >
                       <p >technical supporter</p>
                   </div>
                   
