--- a/students-gallary.html
+++ b/students-gallary.html
@@ -48,7 +48,7 @@
        <!--Navbar is end here-->
 
 <div class="page-wrapper">
-    
+   
 </div>
 
 
@@ -57,7 +57,7 @@
 <footer>
   <div class="footer-content">
    <div class="row">
-     <div class="footer-section about col-4 col-md-6 col-sm-12">
+     <div class="footer-section  about  col-md-6 ">
        <h1><span class="logo-s">S</span>AKM</h1>
        <p>Hazrat Shah Ali Bagdadi (R.) Kamil M.A. Madrasha</p>
        <p>Mirpur-1, Dhaka -1216</p>
@@ -66,14 +66,14 @@
          <span > <i class="fa fa-envelope"></i>&nbsp;skmahbubkr786@gmail.com</span>
        </div>
        <div class="socials  mt-3">
-         <i class="fa fa-facebook mx-3"></i>
-         <i class="fa fa-instagram mx-3"></i>
-         <i class="fa fa-twitter mx-3"></i>
-         <i class="fa fa-youtube mx-3"></i>
-         <i class="fa fa-google mx-3"></i>
+         <i class="fa fa-instagram d-inline-block"></i>
+         <i class="fa fa-instagram d-inline-block"></i>
+         <i class="fa fa-twitter d-inline-block"></i>
+         <i class="fa fa-youtube d-inline-block "></i>
+         <i class="fa fa-google d-inline-block"></i>
        </div>
      </div>
-     <div class="footer-section links col-4 col-md-6 col-sm-12">
+     <div class="footer-section links   col-md-6 ">
        <h2>Quick Links</h2><br/>
        <ul class="link">
          
@@ -86,17 +86,17 @@
        </ul>
 
      </div>
-     <div class="footer-section contact-form col-4 col-md-12 col-sm-12">
+     <div class="footer-section contact-form  col-md-6 ">
        <h2>Contact Us</h2>
        <form action="index.html">
          <div class="input-group mb-3">
-           <input type="email" class="form-control form-control-sm" placeholder="Enter your Email"d>
-           <div class="input-group-append">
+           <input type="email" class="form-control" placeholder="Enter your Email"d>
+           <div class="input-group-append ">
              <span class="input-group-text" id="basic-addon2">@example.com</span>
            </div>
          </div>
          <label >Why do you contact with us?</label>
-         <textarea class="form-control form-control-sm"  placeholder="Write your massege"></textarea>
+         <textarea class="form-control"  placeholder="Write your massege"></textarea>
          <button type="submit" class="btn btn-outline-info mt-2 ">
            <i class="fa fa-envelope"> &nbsp;</i>
            send
