--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <!--card section is start here-->
       <section class="container pnc-bg">
           <div class="row">
-              <div class=" col-md-6  mt-3">
+              <div class=" col-md-4  mt-3">
                     <div class="card border-primary">
                       <div class="card-header bg-primary">
                           LATEST NEWS
@@ -166,7 +166,7 @@
                       </ul>
                     </div>
               </div>
-              <div class=" col-md-6 mt-3">
+              <div class=" col-md-4 mt-3">
                   <div class="card border-primary">
                       <div class="card-header bg-primary">
                           EVENTS
@@ -186,7 +186,7 @@
                         </ul>
                     </div>
               </div>
-              <div class=" col-md-6 mt-3">
+              <div class=" col-md-4 mt-3">
                   <div class="card border-primary">
                       <div class="card-header bg-primary">
                           NOTICE BOARD
@@ -214,7 +214,7 @@
        <!--sponsered section is start here-->
   
       <section class="container background-sponsered">
-          <h1 class=" mb-5 text-center text-success display-3">Sponsored by</h1>
+          <h1 class=" mb-5 text-center text-info">Sponsored by</h1>
           <div class="row">
               <div class="  col-md-6">
                   <div class="container text-dark">
