--- a/teachers.html
+++ b/teachers.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="teachers.html">teachers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="students-gallary.html">Students Gallary</a>
+              <a class="nav-link" href="students-gallary.html">Students</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="event.html">Event</a>
