--- a/students-gallary.html
+++ b/students-gallary.html
@@ -1165,6 +1165,7 @@
 <!--footer section is start here-->
 
 <footer>
+  <div class="container">
   <div class="footer-content">
    <div class="row">
      <div class="footer-section  about  col-md-6 ">
@@ -1215,6 +1216,7 @@
      </div>
    </div>
   </div>
+</div>
   <div class="footer-bottom">
    &copy; <span class="logo-s">S</span>AKM 2020 | All rights reserved. Designed by Md Mahbub SK
   </div>
