--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                           <li class="list-group-item">Cras justo odio</li>
                           <li class="list-group-item">Dapibus ac facilisis in</li>
                           <li class="list-group-item">Vestibulum at eros</li>
-                          <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum laudantium libero, officia minus consectetur atque quas odit excepturi sit! Nisi, molestias illum. Necessitatibus illo ratione adipisci blanditiis fugit deserunt veniam.</li>
+                          <li class="list-group-item">this is too much.</li>
                           <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam, veniam modi dicta fuga odit sunt ad reprehenderit doloremque deleniti deserunt at labore accusamus praesentium autem, harum delectus tempore sint.</li>
                           <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, doloribus minima aliquam, vero eum veniam libero dolorum possimus itaque quam repellat unde est, quaerat dolore vitae. Cumque maiores natus ducimus?</li>
                           <li class="list-group-item">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, quo laboriosam dignissimos nostrum tempora aut cumque, inventore placeat, aspernatur eum rerum fugit sequi blanditiis voluptatem! Quia doloremque exercitationem nulla eum?</li>
