--- a/students-gallary.html
+++ b/students-gallary.html
@@ -34,11 +34,11 @@
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown">
-                Admition
+                Admission
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">New Student</a>
-                <a class="dropdown-item" href="#">Old Student</a>
+                <a class="dropdown-item" href="newAdmition.html">New Student</a>
+                <a class="dropdown-item" href="oldAdmition.html">Old Student</a>
                 
               </div>
             </li>
