--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 Admition
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">New Student</a>
-                <a class="dropdown-item" href="#">Old Student</a>
+                <a class="dropdown-item" href="newAdmition.html">New Student</a>
+                <a class="dropdown-item" href="oldAdmition.html">Old Student</a>
                 
               </div>
             </li>
