addmission spell correction

--- a/newAdmition.html
+++ b/newAdmition.html
@@ -34,7 +34,7 @@
 
             <li class="nav-item dropdown active">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown">
-                Admition
+                Admission
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item active" href="newAdmition.html">New Student</a>
